add freellm and switch logic
